--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
         <div class="container">
             <a href="#" class="navbar-brand text-light">Heros World</a>
 
-             <button class="navbar-toggler" 
-             type="button" 
-             data-bs-toggle="collapse" 
-             data-bs-target="#navmenu">
-                 <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navmenu">
                 <ul class="navbar-nav ms-auto">
@@ -35,8 +32,218 @@
             </div>
         </div>
     </nav>
+    <!--Showcase-->
+    <section class="bg-dark text-light text-center text-md-start">
+        <div class="container">
+            <div class="d-md-flex p-5 align-items-center">
+                <div class="px-md-5">
+                    <h3>Become a <span class="text-warning">Web Developer</span></h3>
+                    <p class="lead py-2">
+                        Go from absolute beginner to becoming a paid professional
+                        working on real life projects.
+                    </p>
+                    <button class="btn btn-primary btn-lg">Register Now</button>
+                </div>
+                <img src="assests/melvin-removebg-preview.png" alt=""
+                    class="d-none d-md-block w-50 p-2 img-fluid bg-primary rounded-circle ">
+            </div>
+        </div>
+    </section>
+    <!--NewsLetter section-->
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between">
+                <h3 class="text-center text-md-start">
+                    Sign Up for our newsletter
+                </h3>
+                <div class="input-group news-input">
+                    <input type="text" class="form-control" placeholder="Enter Email" />
+                    <button class="btn btn-outline-secondary btn-lg text-light btn-dark" type="button"
+                        id="button-addon2">
+                        Send
+                    </button>
+                </div>
+            </div>
 
+    </section>
 
+    <!--Boxes-->
+    <section class="py-5">
+        <div class="container">
+            <div class="row text-cener g-3">
+                <div class="col-md">
+                    <div class="card text-center bg-dark text-light">
+                        <div class="card-body">
+                            <div class="h1">
+                                <i class="bi bi-laptop"></i>
+                            </div>
+                            <h3 class="card-title">Virtual</h3>
+                            <p class="card-text">
+                                Some sample texts to build and add readable contents to the card
+                            </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="card text-center bg-secondary text-light">
+                        <div class="card-body">
+                            <div class="h1">
+                                <i class="bi bi-briefcase"></i>
+                            </div>
+                            <h3 class="card-title">Project Based</h3>
+                            <p class="card-text"> Some sample texts to build and add readable contents to the card
+                            </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col md">
+                    <div class="card text-center bg-dark text-light">
+                        <div class="card-body">
+                            <h1>
+                                <i class="bi bi-award"></i>
+                            </h1>
+                            <h3 class="card-title">Certificate</h3>
+                            <p class="card-text">
+                                Some sample texts to build and add readable contents to the card
+                            </p>
+                            <a href="#" class="btn btn-primary">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Intro Section-->
+    <section class="bg-light text-dark text-center text-md-start">
+        <div class="container">
+            <div class="d-md-flex align-items-center text-50">
+                <div class="img img-fluid align-items-center">
+                    <img src="assests/Tech_photo-removebg-preview.png" alt="" class="">
+                </div>
+                <div class="p-md-3 text">
+                    <h3>Go from zero to Hero</h3>
+                    <p class="lead">
+                        Transform your skills from beginner to advanced with
+                        our comprehensive courses
+                        designed for all levels.
+                    </p>
+                    <p>
+                        Whether you're just starting out or looking
+                        deepen your expertise,our tailored programs
+                        provide hands-on learning experiences to help you
+                        succeed. With guidance from industry professionals,
+                        you'll build confidence and master the skills you need
+                        to thrive in your career.
+                    </p>
+                    <button class="btn"><i class="bi bi-chevron-right"></i>Read More</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Learn Section-->
+    <section class="bg-dark text-light text-center text-md-start py-5">
+        <div class="container">
+            <div class="d-md-flex align-items-center text-50 ">
+
+                <div class="p-md-5 text">
+                    <h3>
+                        Master ReactJs, NodeJs, ExpressJs, MongoDB, and NextJs
+                    </h3>
+                    <p class="lead">
+                        Become a full stack developer with our comprehensive
+                        courses on ReactJS, NodeJS, ExpressJS, MongoDB
+                        , and NextJS.
+                    </p>
+                    <p>
+                        Learn to build responsive front-end applications with
+                        ReactJS, optimize your development with NextJS, Create
+                        powerful back-end services using NodeJs and ExpressJS
+                        , and efficiently manage databases with MomgoDB. Our
+                        hands-on courses offers real-world projects and expertise
+                        guidance to help you master modern web development technologies.
+                    </p>
+                    <button class="btn btn-light mt-3"><i class="bi bi-chevron-right"></i>Read More</button>
+                </div>
+                <div class="img2 img-fluid m-5">
+                    <img src="assests/React.png" alt="" class="real-image ml-5">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Questions-->
+    <section class="py-5">
+        <div class="container text-center">
+            <h3 class="">Frequently Asked Questions</h3>
+
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne">
+                                What's the duration of this course?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                               The course is designed to be completed over the span of 7 months, with a commitment of approximate
+                                5-7 hours per week. Each week includes video lectures, reading materials, and
+                                assignments that helps reinforce the concepts learned. While the course is self-
+                                paced, we encourage participants to stay on track with the weekly schedule,
+                                to maximise their learning experience.
+                       </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            What will i be able to build?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            By the end of the course, you will have the skill to build several web applications
+                            .Examples include a "personal portfolio website" that showcases your projects
+                            and skills, a "dynamic e-commerce store platform" with user authentification and payment
+                            integration and a "real time chat application" using WebSockets. Addityionally, you will learn
+                            to create a "task management tool" similar to Trello using ReactJS for the front-end and NodeJS
+                            and ExpressJs for the back-end and MongoDB as the database. You may also build small applications
+                            that intergrate with thrid-party APIs such as "Weather Dashboard" that fetches real-time 
+                            data from a weather API. The final project will be a comprehensive application that incorporates all
+                            these skills, serving as a capstone to demonstrate your proficiency and creativeity. providing you with
+                            a portfolio piece to show potential emplyers or clients.                            
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item pb-md-5">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            Is there a Certificate after the trainning?
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            Yes. Upon completing the course and all the assessments, you will receive a certification
+                            of completion. This certificate is a great way to showcase your newly acquired skills on your
+                            resume, linkedIn profile, or personal website. its important to note that the certification is not
+                            an official accerditation but serves as recognition for your hark work and decication in completing
+                            the course.
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
 
     <script src="bootstrap.js"></script>
 </body>
