--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
     <section class="bg-dark text-light p-5 text-center">
         <div class="container">
             <div>
-                <p class="lead">Copyright 2024 fullstack Bootcamp</p>
+                <p class="lead">Copyright &copy;2024 fullstack Bootcamp</p>
 
                 <a href="">
                     <i class="bi bi-arrow-up-circle h1"></i>
